# Magpie

./: .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Dockerfile.ingest  Dockerfile.server  LICENSE  README.md  THIRD-PARTY-NOTICES.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  renovate.json  tsconfig.json  vite.config.js  vitest.integration.config.ts
core/: Cargo.toml  deny.toml  rust-toolchain.toml
core/.cargo/: config.toml
core/qf-logging/: Cargo.toml
core/qf-logging/src/: lib.rs
core/qf-optimizer/: Cargo.toml  pyproject.toml
core/qf-optimizer/python_smoke/: test_smoke.py
core/qf-optimizer/src/: error.rs  lib.rs  model.rs  python.rs  solve.rs  wasm.rs
core/qf-optimizer/tests/: equivalence.rs
core/qf-quant/: Cargo.toml  pyproject.toml
core/qf-quant/benches/: qf_quant_bench.rs
core/qf-quant/python_smoke/: test_gil_release.py  test_smoke.py
core/qf-quant/src/: black76.rs  bs.rs  edge_greeks.rs  futures_specs.rs  iv.rs  lib.rs  normal.rs  probability.rs  python.rs  sabr.rs  spline.rs  vol_surface.rs
core/qf-quant/tests/: equivalence.rs
research/: pyproject.toml
research/magpie-ibkr-nt/: pyproject.toml
research/magpie-ibkr-nt/src/magpie_ibkr_nt/: __init__.py  broker_bridge.py  run_bridge.py  session.py
research/magpie-ibkr-nt/tests/: test_broker_bridge.py
research/magpie-logging/: pyproject.toml
research/magpie-logging/src/magpie_logging/: __init__.py  parity_harness.py
research/magpie-logging/tests/: test_schema.py
research/magpie-md-bridge/: pyproject.toml
research/magpie-md-bridge/src/magpie_md_bridge/: __init__.py  wire.py
research/magpie-md-bridge/systemd/: ibkr-md-bridge.service  schwab-md-bridge.service
research/magpie-md-bridge/tests/: test_ibkr_bridge.py  test_schwab_bridge.py  test_schwab_rest_md_client.py  test_smoke.py  test_wire_parity.py
research/magpie-prod-bundle/: pyproject.toml
research/magpie-prod-bundle/src/magpie_prod_bundle/: __init__.py  hotswap.py  ibkr_bootstrap.py  launcher.py
research/magpie-prod-bundle/tests/: test_hotswap.py  test_launcher.py
research/magpie-research/: pyproject.toml
research/magpie-research/src/magpie_research/: __init__.py  app.py  cli.py  config.py  events.py  guards.py  jobs.py  nats.py  routes.py  workers.py
research/magpie-research/tests/: test_config.py  test_events.py  test_guards.py  test_jobs.py  test_nats.py  test_routes.py  test_workers.py
research/magpie-risk-gate/: pyproject.toml
research/magpie-risk-gate/src/magpie_risk_gate/: __init__.py  config.py  envelopes.py  gate.py  wire.py
research/magpie-risk-gate/tests/: test_classifier.py  test_envelopes.py  test_fail_open.py  test_gate_skeleton.py  test_parent_budget.py
research/magpie-schwab-nt/: pyproject.toml
research/magpie-schwab-nt/src/magpie_schwab_nt/: __init__.py  account_activity.py  auth.py  broker_bridge.py  exec_client.py  order_status.py  streaming.py  trades.py  wire.py
research/magpie-schwab-nt/systemd/: magpie-schwab-nt@.service
research/magpie-schwab-nt/tests/: test_account_activity.py  test_auth.py  test_book.py  test_broker_bridge.py  test_exec_client.py  test_order_status.py  test_quotes.py  test_streaming.py  test_trades.py
research/magpie-secrets/: pyproject.toml
research/magpie-secrets/src/magpie_secrets/: __init__.py  provider.py
research/magpie-secrets/tests/: __init__.py  test_provider.py
research/magpie-subjects/: pyproject.toml
research/magpie-subjects/src/magpie_subjects/: __init__.py  subjects.py
research/magpie-subjects/tests/: test_subjects.py
research/quantfoundry-ibkr-nt/: pyproject.toml
research/quantfoundry-ibkr-nt/src/quantfoundry_ibkr_nt/: __init__.py  broker_bridge.py  session.py
research/quantfoundry-ibkr-nt/tests/: test_broker_bridge.py
research/quantfoundry-logging/: pyproject.toml
research/quantfoundry-logging/src/quantfoundry_logging/: __init__.py  parity_harness.py
research/quantfoundry-logging/tests/: test_schema.py
research/quantfoundry-md-bridge/: pyproject.toml
research/quantfoundry-md-bridge/src/quantfoundry_md_bridge/: __init__.py  wire.py
research/quantfoundry-md-bridge/systemd/: ibkr-md-bridge.service  schwab-md-bridge.service
research/quantfoundry-md-bridge/tests/: test_ibkr_bridge.py  test_schwab_bridge.py  test_schwab_rest_md_client.py  test_smoke.py  test_wire_parity.py
research/quantfoundry-research/: pyproject.toml
research/quantfoundry-research/src/quantfoundry_research/: __init__.py  app.py  cli.py  config.py  events.py  guards.py  jobs.py  nats.py  routes.py  workers.py
research/quantfoundry-research/tests/: test_config.py  test_events.py  test_guards.py  test_jobs.py  test_nats.py  test_routes.py  test_workers.py
research/quantfoundry-risk-gate/: pyproject.toml
research/quantfoundry-risk-gate/src/quantfoundry_risk_gate/: __init__.py  classifier.py  config.py  gate.py
research/quantfoundry-risk-gate/tests/: test_classifier.py  test_envelopes.py  test_fail_open.py  test_gate_skeleton.py  test_parent_budget.py
research/quantfoundry-schwab-nt/: pyproject.toml
research/quantfoundry-schwab-nt/src/quantfoundry_schwab_nt/: __init__.py  account_activity.py  book.py  broker_bridge.py  exec_client.py  quotes.py  streaming.py  trades.py  wire.py
research/quantfoundry-schwab-nt/tests/: test_account_activity.py  test_auth.py  test_book.py  test_broker_bridge.py  test_exec_client.py  test_order_status.py  test_quotes.py  test_streaming.py  test_trades.py
research/quantfoundry-signals/: pyproject.toml
research/quantfoundry-signals/src/quantfoundry_signals/: __init__.py  cli.py  (+7 more)
research/quantfoundry-signals/tests/: test_provenance.py  test_publisher.py  test_symbol.py  test_types.py  test_worker.py
research/spikes/m13-01-nt-ib-mdclient/: README.md  REPORT.md  probe.py  pyproject.toml
research/tests/: test_logging_parity.py
research/vol-forecast-spy-1d/: pyproject.toml
research/vol-forecast-spy-1d/data/: spy_returns_fixture.csv
research/vol-forecast-spy-1d/tests/: test_data.py  test_model.py  test_vol_forecast_worker.py
(+637 files in other folders)
