[project]
name = "magpie-schwab-nt"
version = "0.0.1"
description = "Schwab broker adapters for NautilusTrader — OAuth, REST exec client, streamer feeds."
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.27.0",
  "websockets>=13.0",
  # NATS-RPC bridge (QF-237) talks to the QF TS server. Pinned at
  # 2.x — the project's existing NATS deployment is JetStream-capable
  # but the bridge only uses core pub/sub + request/reply.
  "nats-py>=2.7.0",
  # Shared NATS subject builders (QF-335) — single source of truth for
  # the orders.* subjects this bridge owns.
  "magpie-subjects",
]

[tool.uv.sources]
magpie-subjects = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magpie_schwab_nt"]

[tool.mypy]
strict = true
