[project]
name = "magpie-secrets"
version = "0.1.0"
description = "Magpie secrets provider: 1Password-backed with env-var fallback. Single source of truth for secrets resolution across TS server + Python broker bridges."
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magpie_secrets"]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]
