[project]
name = "quantfoundry-ibkr-nt"
version = "0.0.1"
description = "IBKR observation-only NT broker adapter — wraps NautilusTrader's IB integration for QF's exec_reports.ibkr / status / positions NATS surface."
requires-python = ">=3.13"
dependencies = [
  # NATS-RPC bridge (QF-240) — same client + pin as quantfoundry-schwab-nt's
  # QF-237 bridge. Core pub/sub + request/reply only.
  "nats-py>=2.7.0",
  # Wire types live in quantfoundry-schwab-nt because that package landed
  # first. They are broker-agnostic — BrokerExecReport / BrokerOrderStatus /
  # BrokerPosition mirror src/types/order.ts which is shared. Future
  # cleanup: extract to a shared `quantfoundry-broker-wire` package; for
  # now the IBKR side reuses the Schwab module to avoid duplication.
  "quantfoundry-schwab-nt",
]

[tool.uv.sources]
quantfoundry-schwab-nt = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantfoundry_ibkr_nt"]

[tool.mypy]
strict = true
