[project]
name = "quantfoundry-logging"
version = "0.0.1"
description = "Magpie structured-logging helper — structlog wrapper emitting the common JSON schema from docs/tdd/observability.md."
requires-python = ">=3.13"
dependencies = [
  "structlog>=24.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantfoundry_logging"]

# The package mypy-strict-clean; ignore_missing_imports stays workspace-default.
[tool.mypy]
strict = true
