[project]
name = "quantfoundry-signals"
version = "0.0.1"
description = "Magpie Python SDK for signal workers — SignalWorker base, HTTP publisher to the signal-ingress sidecar, schema validation, provenance helpers, and a one-shot CLI."
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.27.0",
  "quantfoundry-logging",
]

[tool.uv.sources]
quantfoundry-logging = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantfoundry_signals"]

[tool.mypy]
strict = true
