[project]
name = "vol-forecast-spy-1d"
version = "0.0.1"
description = "Magpie signal worker — 1-day-ahead realized-vol forecast for SPY via EWMA (RiskMetrics lambda=0.94). Validation case for the quantfoundry-signals SDK."
requires-python = ">=3.13"
dependencies = [
  "quantfoundry-logging",
  "quantfoundry-signals",
]

[tool.uv.sources]
quantfoundry-logging = { workspace = true }
quantfoundry-signals = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vol_forecast_spy_1d"]

[tool.mypy]
strict = true
